# CLAUDE-BRAIN

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml
agent/: Dockerfile  __init__.py  entrypoint.sh  models.py  requirements.txt
agent/api/: deps.py  main.py
agent/api/routers/: agent_loop.py  chat.py  git_routes.py  jupyter_routes.py  memory_routes.py  registry_routes.py  system.py
agent/core/: __init__.py  agentic_loop.py  claude_runner.py  git_workflow.py  jupyter_kernel.py  router.py  runtime_executor.py  watcher.py
agent/memory/: __init__.py  mem0_manager.py  memory_manager.py
agent/orchestrator/: __init__.py  multi_agent.py
agent/registry/: __init__.py  component_registry.py
agent/skills/: __init__.py  skill_manager.py
config/nginx/: nginx.conf
config/nginx/conf.d/: default.conf
config/supabase/: 01-extensions.sql  03-n8n.sql  04-watcher.sql
docs/: ARCHITECTURE.md
jupyter/: Dockerfile  jupyter_config.py
sandbox/: Dockerfile  main.py
scripts/: install-aitmpl.sh  install.sh  setup-auth.sh
skills/code-review/: SKILL.md
skills/github-ops/: SKILL.md
skills/n8n-workflows/: SKILL.md
skills/nextjs-supabase-dev/: SKILL.md
skills/web-research/: SKILL.md
telegram/: Dockerfile  bot.py
